--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,6 @@
 {
-  "name": "sage",
-  "homepage": "https://roots.io/sage/",
-  "authors": [
-    "Ben Word <ben@benword.com>"
-  ],
+  "name": "Frontend Automate Skeleton",
+  "author": "Duy Duc <duyduc.uit@gmail.com>",
   "license": "MIT",
   "private": true,
   "dependencies": {
