- Add paths settings to manifest. - Clear main.js

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -21,6 +21,10 @@
       "bower": ["jquery"]
     }
   },
+  "paths": {
+    "source": "assets/",
+    "dist": "public/dist/"
+  },
   "config": {
     "devUrl": "127.0.0.1"
   }
