--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Frontend Automate Skeleton",
+  "name": "frontend_automate_skeleton",
   "author": "Duy Duc <duyduc.uit@gmail.com>",
   "license": "MIT",
   "private": true,
